Blackpurl/src/objects/Return_VO_Header__c.object
<CustomObject>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>AccountingResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Memo__c</fullName>
        <label>Credit Memo#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credited_Date__c</fullName>
        <label>Credited Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Total__c</fullName>
        <formula>SubTotal__c +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Credited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Return VO Headers</relationshipLabel>
        <relationshipName>Return_VO_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountingLastSyncTime__c</fullName>
        <label>accountingLastSyncTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>availForQBSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>availForQBSync</label>
        <type>Checkbox</type>
    </fields>
    <label>Return VO Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Async_QB_Return_Vendor_Orders</fullName>
        <columns>NAME</columns>
        <columns>Credit_Memo__c</columns>
        <columns>RMA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>availForQBSync__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Async QB Return Vendor Orders</label>
    </listViews>
    <nameField>
        <displayFormat>RTN-{00000000}</displayFormat>
        <label>Return VO Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return VO Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>